Add basic content

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <div id="main-div">
+        <h1>Joe Miner Roundabout</h1>
+        <p>By building a statue of Joe Miner in the middle of the Missouri S&T roundabout, we can increase school spirit and make our students more successful.</p>
+    </div>
 </body>
 </html>
