Add image to page

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <body>
     <div id="main-div">
         <h1>Joe Miner Roundabout</h1>
+        <img id="joe-miner-roundabout-image" src="Joe_Miner_Roundabout.png">
         <p>By building a statue of Joe Miner in the middle of the Missouri S&T roundabout, we can increase school spirit and make our students more successful.</p>
     </div>
 </body>
