--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <p>By building a statue of Joe Miner in the middle of the Missouri S&T roundabout, we can increase school spirit and make our students more successful.</p>
         <p>Missouri S&T is a difficult school. Our graduation rate is a mere <b>63%</b>&mdash;significantly below the <b>73%</b> graduation rate of Mizzou.</p>
         <p>By building a statue of Joe Miner in the middle of the roundabout&mdash;consequently raising school spirit&mdash;we can fix this problem. Research shows that students with higher levels of school spirit are <b>79%</b> more likely to perform above average academically.</p>
-        <h2>Support our cause by printing the flyer!</h2>
-        <img id="joe-miner-roundabout-flyer" src="Joe_Miner_Roundabout_Flyer.png">
+        <h2>Support our cause by printing the flier!</h2>
+        <img id="joe-miner-roundabout-flier" src="Joe_Miner_Roundabout_Flier.png">
     </div>
 </body>
 </html>
